Updated to Adventure API